<resources>
    <string name="ecv_day_name_kw">Week</string>
    <string name="ecv_day_name_monday">Mon</string>
    <string name="ecv_day_name_tuesday">Tue</string>
    <string name="ecv_day_name_wednesday">Wed</string>
    <string name="ecv_day_name_thursday">Thu</string>
    <string name="ecv_day_name_friday">Fri</string>
    <string name="ecv_day_name_saturday">Sat</string>
    <string name="ecv_day_name_sunday">Sun</string>

    <string-array name="ecv_month_names">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>