<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/Theme.Material3.Light">

    <RelativeLayout
        android:id="@+id/eventCalendarSingleWeekViewMonthYearHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/eventCalendarSingleWeekViewMonthYearTextView1"
            style="@style/ECV_MonthYear"
            android:layout_centerInParent="true"
            android:minHeight="48dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            style="@style/ECV_DayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_weight="1"
            android:text="@string/ecv_day_name_monday" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_gravity="bottom"
            android:background="@color/ecv_item_divider_decoration_color" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/ECV_DayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_weight="1"
            android:text="@string/ecv_day_name_tuesday" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_gravity="bottom"
            android:background="@color/ecv_item_divider_decoration_color" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/ECV_DayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_weight="1"
            android:text="@string/ecv_day_name_wednesday" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_gravity="bottom"
            android:background="@color/ecv_item_divider_decoration_color" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/ECV_DayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_weight="1"
            android:text="@string/ecv_day_name_thursday" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_gravity="bottom"
            android:background="@color/ecv_item_divider_decoration_color" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/ECV_DayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_weight="1"
            android:text="@string/ecv_day_name_friday" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_gravity="bottom"
            android:background="@color/ecv_item_divider_decoration_color" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/ECV_DayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_weight="1"
            android:text="@string/ecv_day_name_saturday" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_gravity="bottom"
            android:background="@color/ecv_item_divider_decoration_color" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/ECV_DayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_weight="1"
            android:text="@string/ecv_day_name_sunday" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ecv_item_divider_decoration_color" />

    <LinearLayout
        android:id="@+id/eventCalendarSingleWeekViewRow1"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:orientation="horizontal">

        <include
            android:id="@+id/eventCalendarSingleWeekViewDay1"
            layout="@layout/ecv_textview_circle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/ecv_item_divider_decoration_color" />

        <include
            android:id="@+id/eventCalendarSingleWeekViewDay2"
            layout="@layout/ecv_textview_circle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/ecv_item_divider_decoration_color" />

        <include
            android:id="@+id/eventCalendarSingleWeekViewDay3"
            layout="@layout/ecv_textview_circle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/ecv_item_divider_decoration_color" />

        <include
            android:id="@+id/eventCalendarSingleWeekViewDay4"
            layout="@layout/ecv_textview_circle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/ecv_item_divider_decoration_color" />

        <include
            android:id="@+id/eventCalendarSingleWeekViewDay5"
            layout="@layout/ecv_textview_circle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/ecv_item_divider_decoration_color" />

        <include
            android:id="@+id/eventCalendarSingleWeekViewDay6"
            layout="@layout/ecv_textview_circle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/ecv_item_divider_decoration_color" />

        <include
            android:id="@+id/eventCalendarSingleWeekViewDay7"
            layout="@layout/ecv_textview_circle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>