<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/eventCalendarViewMonthYearHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/eventCalendarViewMonthYearImageViewLeft"
            style="@style/ECV_Arrow_Icon"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ecv_chevron_left"
            android:theme="@style/ECV_RippleColor"
            app:tint="@color/ecv_item_day_name_color"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/eventCalendarViewMonthYearTextView1"
            style="@style/ECV_MonthYear"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@+id/eventCalendarViewMonthYearImageViewRight"
            android:layout_toEndOf="@+id/eventCalendarViewMonthYearImageViewLeft" />

        <ImageView
            android:id="@+id/eventCalendarViewMonthYearImageViewRight"
            style="@style/ECV_Arrow_Icon"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ecv_chevron_right"
            android:theme="@style/ECV_RippleColor"
            app:tint="@color/ecv_item_day_name_color"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_gravity="bottom"
            android:background="@color/ecv_item_divider_decoration_color" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/ECV_DayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_weight="1"
            android:text="@string/ecv_day_name_monday" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_gravity="bottom"
            android:background="@color/ecv_item_divider_decoration_color" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/ECV_DayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_weight="1"
            android:text="@string/ecv_day_name_tuesday" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_gravity="bottom"
            android:background="@color/ecv_item_divider_decoration_color" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/ECV_DayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_weight="1"
            android:text="@string/ecv_day_name_wednesday" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_gravity="bottom"
            android:background="@color/ecv_item_divider_decoration_color" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/ECV_DayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_weight="1"
            android:text="@string/ecv_day_name_thursday" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_gravity="bottom"
            android:background="@color/ecv_item_divider_decoration_color" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/ECV_DayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_weight="1"
            android:text="@string/ecv_day_name_friday" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_gravity="bottom"
            android:background="@color/ecv_item_divider_decoration_color" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/ECV_DayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_weight="1"
            android:text="@string/ecv_day_name_saturday" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_gravity="bottom"
            android:background="@color/ecv_item_divider_decoration_color" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/ECV_DayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_weight="1"
            android:text="@string/ecv_day_name_sunday" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ecv_item_divider_decoration_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="6">

        <include
            android:id="@+id/eventCalendarViewRow1"
            layout="@layout/ecv_include_rows"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ecv_item_divider_decoration_color" />

        <include
            android:id="@+id/eventCalendarViewRow2"
            layout="@layout/ecv_include_rows"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ecv_item_divider_decoration_color" />

        <include
            android:id="@+id/eventCalendarViewRow3"
            layout="@layout/ecv_include_rows"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ecv_item_divider_decoration_color" />

        <include
            android:id="@+id/eventCalendarViewRow4"
            layout="@layout/ecv_include_rows"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ecv_item_divider_decoration_color" />

        <include
            android:id="@+id/eventCalendarViewRow5"
            layout="@layout/ecv_include_rows"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ecv_item_divider_decoration_color" />

        <include
            android:id="@+id/eventCalendarViewRow6"
            layout="@layout/ecv_include_rows"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ecv_item_divider_decoration_color" />

</LinearLayout>